# Hinjaku

./: .gitignore  Cargo.toml  MEMO.txt  README.md  build.rs  end
.claude/: settings.json
.history/: .gitignore_20260414140910  .gitignore_20260415065802  .gitignore_20260415090829  .gitignore_20260415221524  .gitignore_20260415221555  .gitignore_20260419185812  AI-Prompt_20260415070824.txt  AI-Prompt_20260415082344.txt  AI-Prompt_20260415101638.txt  Cargo_20260412214906.toml  Cargo_20260413113949.toml  Cargo_20260413175003.toml  Cargo_20260413225100.toml  Cargo_20260413225156.toml  Cargo_20260414173239.toml  Cargo_20260414173954.toml  Cargo_20260415085316.toml  Cargo_20260415100239.toml  Cargo_20260415101038.toml  Cargo_20260415211153.toml  Cargo_20260415211525.toml  Cargo_20260415211703.toml  Cargo_20260415211806.toml  Cargo_20260417200047.toml  Cargo_20260417200336.toml  Cargo_20260417200648.toml  Cargo_20260417211554.toml  Cargo_20260418174232.toml  Cargo_20260419094344.toml  Cargo_20260419180200.toml  Cargo_20260419184650.toml  Gemini-MEMO_20260415083913.txt  Gemini-MEMO_20260415084213.txt  Gemini-MEMO_20260415084800.txt  Gemini-MEMO_20260415085316.txt  Gemini-MEMO_20260417191824.txt  Gemini-MEMO_20260417192300.txt  Gemini-MEMO_20260417192458.md  Gemini-MEMO_20260417192927.md  Gemini-MEMO_20260417193352.md  (+50 more)
.history/src/: app_core_20260413224422.rs  (+762 more)
src/: archive.rs  config.rs  constants.rs  input.rs  integrator.rs  launch.json  main.rs  manager.rs  nav_tree.rs  painter.rs  pdf_handler.rs  shell.rs  startup.rs  toast.rs  types.rs  utils.rs  viewer.rs  wic.rs  widgets.rs  window.rs
yobi/: navigator.rs
(+54 files in other folders)
