[package]
name = "hinjaku"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "hinjaku"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["wgpu", "accesskit", "default_fonts"] }
egui = "0.27"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
rfd = "0.14"
anyhow = "1"
thiserror = "1.0"
log = "0.4"
rust-ini = "0.21"
pdfium-render = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_Foundation",
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_Memory",
] }

[profile.release]
# ⚠️ opt-level は必ず 3 のままにすること。
# "z"（サイズ優先）に変更すると速度最適化が無効になり、
# 画像デコード・リサイズ処理が遅くなってCPU負荷が急増する。
# 過去に "z" へ変更されてCPU負荷問題が発生した経緯がある (0.1.2)。
# 変更するなら必ずユーザーへ確認を取ること。
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[build-dependencies]
winres = "0.1"
